New SemanticBuilder 70% done